--- a/propertycheck/src/main/resources/static/css/style.css
+++ b/propertycheck/src/main/resources/static/css/style.css
@@ -14,8 +14,20 @@ body{
 input{
     border: none;
 }
+input[type="button"], input[type="submit"]{
+    -moz-appearance: none;/*remove ignore height on real mobile device*/
+    -webkit-appearance: none;
+    appearance: none;
+}
 input:focus, textarea:focus{
     outline:  none;
+}
+input[name="rememberMe"]{
+    border: 2px solid #cacaca;/*prevent ignore on real mobile devices*/
+    width: 12px;
+    border-radius: 3px;
+    height: 12px;
+
 }
 .page-padding{
     padding: 10em 8%;
@@ -123,6 +135,7 @@ input:focus, textarea:focus{
 .link-field{
     align-self: center;/* prevents equal height on children*/
     color: #357abe;
+    white-space: nowrap;
 }
 .horozontalline-wrapper{
     position: absolute;
@@ -167,6 +180,9 @@ input:focus, textarea:focus{
     flex-direction: column;
     justify-items: center;
     align-items: center;
+}
+.field-wrapper.bottom div{
+    display: inherit;
 }
 .overlay{
     height: 30%;
