--- a/propertycheck/src/main/resources/static/css/style.css
+++ b/propertycheck/src/main/resources/static/css/style.css
@@ -3,16 +3,18 @@ html, body{
 }
 body{
     font-size: 0.8333333333333334vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana;
     line-height: 20px;
     font-weight: 500;
     margin: 0; /*remove default*/
+    color: #fff;
 }
 .hidden{
     display: none;
 }
 input{
     border: none;
+    font-family: Verdana;/*overriding default*/
 }
 input[type="button"], input[type="submit"]{
     -moz-appearance: none;/*remove ignore height on real mobile device*/
@@ -38,39 +40,58 @@ input[name="rememberMe"]{
     justify-content: center;
     min-height: 100%;
     padding: 0;
+    background-color: #cacaca2a;
 }
 .container{
+    display: flex;/*fix width block position on tablet*/
     max-width: 1920px;
     margin: 0 auto;
 }
 .background_image{
     position: absolute;
-    background-image: url("/images/istockphoto-693579192-612x612.jpg");
+    background-image: url("/images/istockphoto-1209585940-612x612.jpg");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
     height: 100%;
     width: 100%;
 }
+.background_overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    mix-blend-mode: soft-light;
+}
+.radial_background{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 80vw;
+    z-index: -1;
+    background: radial-gradient(#cacaca1a 0%, transparent 70%);
+}
 .auth_form_wrapper{
     position: relative;
     margin: 0 auto;
-    padding: 95px 80px 0px;/*top , left&right, bottom*/
-    width: 325px;
-    min-height: 515px;
-    border: 1px solid #cacaca;
+    padding: 125px 80px 0 80px;/*top , left&right, bottom*/
+    width: 275px;
+    min-height: 475px;
+    /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.5);*/
     background-color: #fff;
     border-radius: 10px;
-    overflow: hidden;
+    overflow: visible;
 }
 .auth_form_wrapper.large{
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 800px;
+    max-width: 60vw; /*for radial space*/
     height: auto;
     padding: 50px 55px 60px;/*top , left&right, bottom*/
     border: none;
-    /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.2)*//*No need*/
 }
 .auth-component{
     position: relative;
@@ -78,12 +99,12 @@ input[name="rememberMe"]{
 }
 .auth_form_wrapper.large .form-block{
     padding: 25px 45px 0;
+    row-gap: 25px;
 }
-
 .form-block{
     display: flex;
     flex-direction: column;
-    row-gap: 25px;
+    row-gap: 10px;
 }
 .field-wrapper{
     display: flex;
@@ -99,6 +120,9 @@ input[name="rememberMe"]{
     align-items: stretch;
     margin: auto 0;
 }
+.field-wrapper-2 .field-wrapper{
+    column-gap: 115px;
+}
 .small-margin{
     margin-bottom: 1em;
 }
@@ -112,10 +136,11 @@ input[name="rememberMe"]{
 .text-field{
     background-color: transparent;
     padding: 12px 0;
-    border: 1px solid #cacaca;
-    border-radius: 5px;
+    border-bottom: 1px solid #cacaca;
     min-width: 0; /*avoid flex children (inputs have min width > 100) exceed parent wodth*/
+    border-radius: 0;
 }
+
 .field-wrapper .label-field{
     flex-grow: 1;
     align-self: center;
@@ -141,8 +166,17 @@ input[name="rememberMe"]{
 .bold-text{
     font-weight: bold;
 }
+.large-heading{
+    font-size: 48px;
+}
+.small-heading{
+    font-size: 28px;
+}
 .light{
     color: grey;
+}
+.dark{
+    color: black;
 }
 .link-field{
     align-self: center;/* prevents equal height on children*/
@@ -163,18 +197,27 @@ input[name="rememberMe"]{
     flex-grow: 1;
     padding: 15px 15px;
     color: white;
-    border-radius: 20px;
-    font-weight: bold;
+    border-radius: 35px;
     /*background-color: #002D62;*/
     background-color: black;
-    align-self: center;
     /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.5);*/
     cursor: pointer;
+    font-weight: 600;
 }
 .submit-button{
     min-width: 300px;
     border-radius: 5px;
     margin-top: 5px;
+}
+.button.small-text.dark {
+    background-color: #fff;
+    color: black;
+    align-self: stretch;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 800;
+    padding: 12px 15px;
+    border: 1px solid #cacaca;
 }
 .bottom{/*parent must be set relative with reasonable height, should not display flex*/
     position: absolute;
@@ -196,7 +239,7 @@ input[name="rememberMe"]{
 .field-wrapper.bottom div{
     display: inherit;
 }
-.overlay{
+.text_overlay{
     position: absolute;
     height: 30%;
     background-image: linear-gradient(0deg, rgb(243 243 243 / 43%) 27%, transparent 38%);
