--- a/propertycheck/src/main/resources/static/css/tablet.style.css
+++ b/propertycheck/src/main/resources/static/css/tablet.style.css
@@ -9,7 +9,7 @@
         font-size: 20px;
     }
     .auth_form_wrapper{
-        padding: 115px 90px 0px;
+        padding: 155px 90px 0 90px;
         width: 400px;
         min-height: 650px;
     }
