--- a/propertycheck/src/main/resources/static/css/style.css
+++ b/propertycheck/src/main/resources/static/css/style.css
@@ -85,13 +85,13 @@ input[name="rememberMe"]{
 .auth_form_wrapper{
     position: relative;
     margin: 0 auto;
-    padding: 125px 80px 0 80px;/*top , left&right, bottom*/
+    padding: 90px 80px 0 80px;/*top , left&right, bottom*/
     width: 275px;
     min-height: 475px;
     /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.5);*/
     background-color: #fff;
     border-radius: 10px;
-    overflow: visible;
+    overflow: hidden;
     background-color: transparent;
 }
 .auth_form_wrapper.large{
@@ -180,6 +180,8 @@ input[name="rememberMe"]{
 }
 .large-heading{
     font-size: 48px;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 .small-heading{
     font-size: 28px;
