--- a/propertycheck/src/main/resources/static/css/style.css
+++ b/propertycheck/src/main/resources/static/css/style.css
@@ -156,13 +156,13 @@ input[name="rememberMe"]{
     flex-grow: 1;
     align-self: center;
 }
-.text-field-2{
-    background-color: transparent;
-    padding: 15px 0;
-    text-align: center;
+.text-field-2 {
+    border-bottom: none;
+    background-color: #cacaca0f;
+    padding: 12px 0 12px 30px;
 }
 .text-field{
-    padding-left: 15px;
+    padding: 15px;
 }
 .small-text{
     font-size: 14px;
