--- a/propertycheck/src/main/resources/static/css/style.css
+++ b/propertycheck/src/main/resources/static/css/style.css
@@ -87,12 +87,12 @@ p{
     position: relative;
     margin: 0 auto;
     padding: 90px 80px 40px 80px;/*top , left&right, bottom*/
-    width: 275px;
+    width: 255px;
     min-height: 475px;
     border-radius: 10px;
     overflow: hidden;
     background-color: transparent;
-    box-shadow: inset 0px 0px 3px 1px rgb(202 202 202 / 50%);/*#cacaca80 same*/
+    box-shadow: inset 0 1px 0px 1px rgb(202 202 202 / 50%);/*#cacaca80 same*/
 }
 .auth_form_wrapper.large{
     display: flex;
@@ -161,7 +161,6 @@ p{
 }
 .text-field-2 {
     border-bottom: none;
-    background-color: #cacaca0f;
     padding: 12px 0 12px 30px;
 }
 .text-field{
@@ -211,7 +210,7 @@ p{
 }
 .button, .submit-button{
     flex-grow: 1;
-    padding: 15px 15px;
+    padding: 10px 15px;
     color: white;
     border-radius: 35px;
     /*background-color: #002D62;*/
@@ -219,7 +218,7 @@ p{
     /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.5);*/
     cursor: pointer;
     font-weight: 600;
-    min-width: 200px;
+    min-width: 100px;
 }
 .submit-button{
     min-width: 300px;
@@ -233,7 +232,7 @@ p{
     text-align: center;
     text-decoration: none;
     font-weight: 800;
-    padding: 12px 15px;
+    padding: 8px 15px;
     border: 1px solid #cacaca;
 }
 .bottom{/*parent must be set relative with reasonable height, should not display flex*/
@@ -293,7 +292,6 @@ p{
 .chat_item.content{
     display: flex;
     flex-direction: column;
-    align-self: end;
     justify-content: center;
     padding: 15px;
 }
@@ -307,8 +305,10 @@ p{
     padding: 15px;
 }
 .profile_pic{
-    width: 4rem;
-    height: 4rem;
+    min-width: 4rem;
+    min-height: 4rem;
+    max-width: 4rem;
+    max-height: 4rem;
     background-size: cover;
     background-position: center;
     border-radius: 50%;
@@ -319,3 +319,24 @@ p{
     width: 80%;
     padding: 0 10%;
 }
+.short-text{
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.loader {
+    display: none;
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #cacaca;
+    border-radius: 50%;
+    width: 1rem;
+    height: 1rem;
+    animation: spin 1s linear infinite;
+    margin: 0 auto;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
