--- a/propertycheck/src/main/resources/static/css/mobileportrait.style.css
+++ b/propertycheck/src/main/resources/static/css/mobileportrait.style.css
@@ -21,7 +21,7 @@
         display: inherit;
         flex-direction: column;
     }
-    .link-field.small-margin {
+    .link-field.small-margin{
         margin: 5px;
     }
     .auth_form_wrapper.large{
@@ -30,13 +30,24 @@
     .page-padding.full_centered{
         background-color: #fff;
     }
-    .text-field {
+    .text-field{
         background-color: #cacaca2a;
     }
-    .auth-component {
+    .auth-component{
         padding: 0 40px 0px;
     }
     .button.small-text, .button.small-text.dark {
         padding: 12px 15px;
+    }
+    .grid_3{
+        display: flex;
+        flex-direction: column;
+    }
+    .chat_item.contacts{
+        height: 100%;
+    }
+    .chat_item.content {
+        height: 100%;
+        padding: 0;
     }
 }
