--- a/marketzone/src/main/resources/static/css/style.css
+++ b/marketzone/src/main/resources/static/css/style.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 html, body{
     height: 100%;
 }
 body{
     font-size: 0.8333333333333334vw;
-    font-family: 'Ubuntu', sans-serif;;
+    font-family:Arial, Helvetica, sans-serif;
     line-height: 20px;
     font-weight: 500;
     margin: 0; /*remove default*/
@@ -31,17 +30,12 @@ input[name="rememberMe"]{
     height: 15px;
 
 }
-label{
-    font-weight: 500;
-}
 p{
     margin: 0;
-    font-weight: 400;
 }
-.text{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 300;
-}
+/*.text{
+    
+}*/
 .page-padding{
     position: relative;
     padding: 10em 8%;
@@ -106,15 +100,16 @@ p{
 .auth_form_wrapper.large{
     display: flex;
     flex-direction: column;
-    width: 800px;
-    max-width: 60vw; /*for radial space*/
+    width: 100%;
+    max-width: 100%;
+    box-shadow: none;
     height: auto;
-    padding: 0 55px 60px;/*top , left&right, bottom*/
+    padding: 0;
     border: none;
 }
 .auth-component{
     position: relative;
-    padding: 115px 40px 0px;
+    padding: 0 40px 0;
 }
 .auth_form_wrapper.large .form-block{
     padding: 25px 45px 0;
@@ -229,6 +224,14 @@ p{
     color: #357abe;
     white-space: nowrap;
 }
+.link-btn{
+    margin-top: 15px;
+    text-decoration: underline;
+    cursor: pointer;
+    display: block;
+    font-weight: 600;
+    font-size: 12px;
+}
 .horozontalline-wrapper{
     position: absolute;
     left: 0;
@@ -239,22 +242,21 @@ p{
     height: 1px;
     width: 100%;
 }
-.button, .submit-button{
+.button{
     flex-grow: 1;
     padding: 10px 15px;
     color: white;
     border-radius: 35px;
     /*background-color: #002D62;*/
     background-color: black;
-    /*box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.5);*/
+    box-shadow: 1px 1px 9px 2px #cacaca;
     cursor: pointer;
     font-weight: 600;
     min-width: 100px;
 }
-.submit-button{
-    min-width: 300px;
-    border-radius: 5px;
-    margin-top: 5px;
+.button:hover{
+    box-shadow: none;
+    text-shadow: 1px 1px 3px white;
 }
 .button.small-text.dark {
     background-color: transparent;
@@ -262,9 +264,9 @@ p{
     align-self: stretch;
     text-align: center;
     text-decoration: none;
-    font-weight: 800;
     padding: 8px 15px;
     border: 1px solid #cacaca;
+    box-shadow: none;
 }
 .bottom{/*parent must be set relative with reasonable height, should not display flex*/
     position: absolute;
@@ -302,10 +304,16 @@ p{
     width: 100%;
     height: 100vh;
 }
+.grid_2{
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    display: grid;  
+}
 .grid_3 {
     width: 100%;
     grid-template-rows: auto;
-    grid-template-columns: 1fr 1.2fr 0.8fr;
+    grid-template-columns: 0.8fr 1.2fr 1fr;
     grid-auto-columns: 1fr;
     display: grid;
 }
@@ -313,7 +321,7 @@ p{
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    padding: 4em 0 4em 8em;
+    padding: 4em 0 4em 2em;
     background-color: white;
 }
 .contact{
@@ -344,6 +352,13 @@ p{
 }
 .message{
     margin-top: 15px;
+}
+.contact .message{
+    margin-top: 0;
+}
+
+#messages label{
+    text-align: center;
 }
 .short-text{
     display: -webkit-box;
