--- a/marketzone/src/main/resources/static/css/style.css
+++ b/marketzone/src/main/resources/static/css/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600;1,700&display=swap');
 html, body{
     height: 100%;
+    margin: 0;
 }
 body{
     font-size: 0.8333333333333334vw;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:  'Times New Roman', Times, serif;
     line-height: 20px;
-    font-weight: 500;
+    font-weight: 400;
     margin: 0; /*remove default*/
     color: #fff;
 }
@@ -14,7 +16,12 @@ body{
 }
 input, textarea{
     border: none;
-    font-family: Verdana;/*overriding default*/
+    /*font-family: Verdana;*/
+    font-family: 'Times New Roman', Times, serif;
+}
+input[type="text"]::placeholder, input[type="password"]::placeholder{
+    color: rgb(119, 119, 119);
+
 }
 input[type="button"], input[type="submit"]{
     -moz-appearance: none;/*remove ignore height on real mobile device*/
@@ -33,6 +40,9 @@ input[name="rememberMe"]{
 p{
     margin: 0;
 }
+h1{
+    font-weight: 700;
+}
 /*.text{
     
 }*/
@@ -44,8 +54,8 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100%;
     padding: 0;
+    min-height: 100%;
 }
 .container{
     display: flex;/*fix width block position on tablet*/
@@ -145,7 +155,7 @@ p{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 15px 0 15px 15px;
+    background-color: transparent;
 }
 .flexi-content-wrapper{/*set max height of child to parent size*/
     position: relative;
@@ -179,7 +189,7 @@ p{
 .search-field{
     padding: 10px 0 10px 25px;
     background-color: #cacaca2a;
-    border-radius: 35px;
+    border-radius: 10px;
 }
 .field-wrapper .label-field{
     flex-grow: 1;
@@ -187,20 +197,23 @@ p{
 }
 .text-field-2 {
     border-bottom: none;
-    padding: 12px 0 12px 30px;
+    padding: 12px 100px 12px 30px;
 }
 .text-field{
     padding: 15px;
 }
-.small-text{
-    font-size: 15px;
+.smaller-text{
+    font-size: 16px;
 }
-.large-text{
-    font-size: 18px;
+.small-text{
+    font-size: 20px;
 }
 .medium-text{
-    font-size: 18px;
+    font-size: 22px;
     letter-spacing: 1.15px;
+}
+.large-text{
+    font-size: 24px;
 }
 .bold-text{
     font-weight: 700;
@@ -242,17 +255,21 @@ p{
     height: 1px;
     width: 100%;
 }
-.button{
+.button, .button-2{
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;
     flex-grow: 1;
     padding: 10px 15px;
     color: white;
-    border-radius: 35px;
-    /*background-color: #002D62;*/
     background-color: black;
-    box-shadow: 1px 1px 9px 2px #cacaca;
     cursor: pointer;
-    font-weight: 600;
     min-width: 100px;
+    border: none;
+}
+.button{
+    border-radius: 35px;
+    box-shadow: 1px 1px 9px 2px #cacaca;
+    font-weight: 600;
 }
 .button:hover{
     box-shadow: none;
@@ -265,7 +282,7 @@ p{
     text-align: center;
     text-decoration: none;
     padding: 8px 15px;
-    border: 1px solid #cacaca;
+    border: 1px solid #cacaca;/*NB: desktop browsers dont support border width less than 1px*/
     box-shadow: none;
 }
 .bottom{/*parent must be set relative with reasonable height, should not display flex*/
@@ -278,6 +295,11 @@ p{
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+}
+.left{/*parent must be set relative with reasonable height, should not display flex*/
+    position: absolute;
+    left: auto;
     right: 0;
 }
 .field-wrapper.bottom{
@@ -302,7 +324,7 @@ p{
 }
 .full_block{
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 .grid_2{
     grid-template-rows: auto;
@@ -313,7 +335,7 @@ p{
 .grid_3 {
     width: 100%;
     grid-template-rows: auto;
-    grid-template-columns: 0.8fr 1.2fr 1fr;
+    grid-template-columns: 0.8fr 1.4fr 0.8fr;
     grid-auto-columns: 1fr;
     display: grid;
 }
@@ -321,8 +343,8 @@ p{
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    padding: 4em 0 4em 2em;
-    background-color: white;
+    background-color: transparent;
+    padding-left: 10px;
 }
 .contact{
     cursor: pointer;
@@ -331,7 +353,7 @@ p{
 .chat_item.content{
     display: flex;/*solve: last chat of containers margin-top increase parent max-height*/
     flex-direction: column;
-    padding: 0 0 0 15px;
+    padding: 0 10px 0 10px;
 }
 .chat_item.profile{
     background-color: white;
@@ -346,13 +368,6 @@ p{
     border-radius: 50%;
     background-color: #cacaca;
 }
-.messages{
-    width: 80%;
-    padding: 0 10%;
-}
-.message{
-    margin-top: 15px;
-}
 .contact .message{
     margin-top: 0;
 }
@@ -366,6 +381,7 @@ p{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+/*
 .loader {
     display: none;
     border: 8px solid #f3f3f3;
@@ -380,15 +396,28 @@ p{
   @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
-  .flexi-content::-webkit-scrollbar, textarea::-webkit-scrollbar{
+  }*/
+.flexi-content::-webkit-scrollbar, textarea::-webkit-scrollbar{
     width: 4px;
     background-color: transparent;
-  }
-  .flexi-content::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track{
+}
+.flexi-content::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track{
     background: transparent;
-  }
-  .flexi-content::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb{
+}
+.flexi-content::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb{
     background: #cacaca;
     border-radius: 35px;
-  }
+}
+#mobile-back-arrow{
+    display: none;
+}
+.back-arrow{
+    border-bottom: 2px solid #cacaca;
+    border-right: 2px solid #cacaca;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    margin-right: 15px;
+    transform: rotate(135deg);
+    cursor: pointer;
+}
