--- a/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
+++ b/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
@@ -38,6 +38,15 @@
     .text-field{
         background-color: #cacaca2a;
     }
+    textarea.text-field {
+        appearance: none;/*mobile ignore box-shadow*/
+        border-radius: 7px;
+        box-shadow: 0px 0px 2px 0 #cacaca;
+        background-color: white;
+    }
+    textarea.text-field + .horozontalline{
+        display: none;
+    }
     .auth-component{
         padding: 0 40px 0px;
     }
@@ -53,6 +62,6 @@
         padding: 0;
     }
     #mobile-back-arrow{
-        display: block;
+        display: flex;
     }
 }
