--- a/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
+++ b/tradezonemarket/src/main/resources/static/css/mobileportrait.style.css
@@ -40,7 +40,8 @@
     }
     textarea.text-field {
         appearance: none;/*mobile ignore box-shadow*/
-        border-radius: 7px;
+        border-radius: 35px;
+        padding: 10px 25px;
         box-shadow: 0px 0px 2px 0 #cacaca;
         background-color: white;
     }
